# aviutl2-aulua

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  about.hbs  about.toml
.github/: release.yaml
.github/workflows/: ci.yaml  deploy-docs.yaml  release.yaml
docs/: .gitignore  book.toml
docs/src/: README.md  SUMMARY.md  ci.md  config.md  config_example.yaml  installation.md  quickstart.md
docs/theme/: codeblock-title.css
schema/: aulua.schema.json
src/: build.rs  config.rs  config_loader.rs  embed.rs  include.rs  init.rs  install.rs  lib.rs  main.rs  pack.rs  schema.rs  text_utils.rs  ui_control.rs
template/: aulua.yaml  gitattributes.txt
tests/: build_test.rs  config_test.rs  pack_test.rs  ui_control_test.rs
tests/common/: mod.rs
tests/fixtures/: build_minimal.yaml  include_a.lua  include_cycle_a.lua  include_cycle_b.lua  include_duplicate_main.lua  include_duplicate_out.lua  include_duplicate_target.lua  include_main.lua  include_main_out.lua  invalid_config.yaml  script1.obj2  ui_control_check_1_in.anm2  ui_control_check_1_out.anm2  ui_control_checksection_1_in.anm2  ui_control_checksection_1_out.anm2  ui_control_checksection_2_in.anm2  ui_control_checksection_2_out.anm2  ui_control_checksection_3_in.anm2  ui_control_checksection_3_out.anm2  ui_control_checksection_4_in.anm2  ui_control_color_1_in.anm2  ui_control_color_1_out.anm2  ui_control_figure_1_in.anm2  ui_control_figure_1_out.anm2  ui_control_figure_2_in.anm2  ui_control_file_1_in.anm2  ui_control_file_2_in.anm2  ui_control_file_2_out.anm2  (+41 more)
(+36 files in other folders)
