[package]
name = "aulua"
version = "0.1.0"
edition = "2024"
description = "AviUtl2 Lua script build & install tool"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml_ng = "0.10.0"
thiserror = "2.0.12"
