[package]
name = "aulua"
version = "0.1.0"
edition = "2024"
description = "AviUtl2 Lua script build & install tool"
repository = "https://github.com/karoterra/aviutl2-aulua"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
regex = "1.11.1"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml_ng = "0.10.0"
thiserror = "2.0.12"

[dev-dependencies]
rstest = "0.25.0"
tempfile = "3.20.0"
